--- a/src/rakudo-star/.devcontainer/devcontainer.json
+++ b/src/rakudo-star/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-	"name": "Favorite color",
-	"image": "mcr.microsoft.com/devcontainers/base:${templateOption:imageVariant}",
+	"name": "Rakudo Star",
+	"image": "docker.io/library/rakudo-star:${templateOption:imageVariant}",
 
 	// 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
 	// "features": {},
@@ -8,7 +8,8 @@
 	// 👇 Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
-	"postCreateCommand": "echo '${templateOption:favorite}' > /tmp/color.txt"
+	// 👇 Use 'postCreateCommand' to run commands after the container is created.
+	"postCreateCommand": "cat /usr/local/etc/greeting.txt"
 
 	// 👇 Configure tool-specific properties.
 	// "customizations": {},
