Update devcontainer, remove Dockerfile

--- a/src/rakudo-star/.devcontainer/devcontainer.json
+++ b/src/rakudo-star/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Rakudo Star",
-	"image": "docker.io/library/rakudo-star:${templateOption:imageVariant}",
+	"image": "docker.io/library/rakudo-star:${templateOption:imageVariant}"
 
 	// 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
 	// "features": {},
@@ -9,7 +9,7 @@
 	// "forwardPorts": [],
 
 	// 👇 Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "cat /usr/local/etc/greeting.txt"
+	// "postCreateCommand": "cat /usr/local/etc/greeting.txt",
 
 	// 👇 Configure tool-specific properties.
 	// "customizations": {},
