--- a/src/rakudo/.devcontainer/devcontainer.json
+++ b/src/rakudo/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 {
 	"name": "Rakudo",
-	"build": {"dockerfile": "Dockerfile"},
+	"build": {
+		"dockerfile": "Dockerfile"
+	}
 
 	// 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
 	// "features": {},
@@ -9,7 +11,7 @@
 	// "forwardPorts": [],
 
 	// 👇 Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "eval \"$(/opt/rakudo/scripts/set-env.sh)\""
+	// "postCreateCommand": "rakudo --version",
 
 	// 👇 Configure tool-specific properties.
 	// "customizations": {},
