Remove Dockerfile and fix workflow

--- a/.github/workflows/test-pr.yaml
+++ b/.github/workflows/test-pr.yaml
@@ -12,7 +12,7 @@ jobs:
         id: filter
         with:
           filters: |
-            rakudo: ./**/rakudo/**
+            raku: ./**/raku/**
 
   test:
     needs: [detect-changes]
